--- a/01_statystyka/01_przedzialy_ufnosci.ipynb
+++ b/01_statystyka/01_przedzialy_ufnosci.ipynb
@@ -439,14 +439,15 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 61,
+   "execution_count": 62,
    "metadata": {},
    "outputs": [
     {
      "name": "stdout",
      "output_type": "stream",
      "text": [
-      "Przedział ufnośći na poziomie ufności 0.9: (np.float64(1.2061233756743832), np.float64(1.3178766243256168)), o długości: [0.11175325]\n"
+      "Przedział ufnośći na poziomie ufności 0.9: (np.float64(1.2061233756743832), np.float64(1.3178766243256168)), o długości: [0.11175325]\n",
+      "To jest oczywiście błędne, bo gdy nie znamy odchylenia standardowego, to nie możemy korzystać z rozkładu normalnego.\n"
      ]
     }
    ],
@@ -454,7 +455,8 @@
     "z1 = stats.norm.ppf(q=1 - alpha / 2, loc=0, scale=1)\n",
     "\n",
     "interval = (X_mean - z1 * X_std / np.sqrt(n), X_mean + z1 * X_std / np.sqrt(n))\n",
-    "print(\"Przedział ufnośći na poziomie ufności 0.9: {}, o długości: {}\".format(interval, np.diff(interval)))"
+    "print(\"Przedział ufnośći na poziomie ufności 0.9: {}, o długości: {}\".format(interval, np.diff(interval)))\n",
+    "print(\"To jest oczywiście błędne, bo gdy nie znamy odchylenia standardowego, to nie możemy korzystać z rozkładu normalnego.\")"
    ]
   },
   {
@@ -465,7 +467,7 @@
     "* W małych próbach (n <= 30) i przy nieznanej wariancji zawsze należy używać rozkładu t-Studenta (model 2).\n",
     "* Rozkład normalny (model 1) nadaje się tylko dla dużych prób lub gdy znamy wariancję populacji.\n",
     "  \n",
-    "🚀 Dlaczego przedział t-Studenta (model 2) jest szerszy?\n",
+    "🚀 Dlaczego przedział ufności t-Studenta (model 2) jest szerszy?\n",
     "* Nieznana wariancja → większa niepewność.\n",
     "* Mała próba → mniej informacji, większe ryzyko błędu.\n",
     "* Wartości krytyczne t są większe niż z dla małych stopni swobody.\n",
@@ -481,7 +483,7 @@
    },
    "source": [
     "## Przedział ufności dla wartości średniej - model 3\n",
-    "Niech $X_1, \\ldots, X_n$ będzie dostatecznie dużą próbą ($n\\geq 100)$ o dowolnym rozkładzie o nieznanej, ale skończonej wartości oczekiwanej i wariancji.\n",
+    "Niech $X_1, \\ldots, X_n$ będzie dostatecznie dużą próbą ($n\\geq 100)$ o **dowolnym rozkładzie** o nieznanej, ale skończonej wartości oczekiwanej i wariancji.\n",
     "\n",
     "Wtedy dla ustalonego poziomu ufności $1-\\alpha$ najkrótszy przedział ufności dla wartości oczekiwanej ma postać\n",
     "$$\n",
@@ -496,29 +498,13 @@
     "id": "YBDV-9XlXaly"
    },
    "source": [
-    "**Zadanie - model 3**. Badania przeprowadzone w maju 1990 roku przez Instytut Gallupa na próbie losowej 2727 dorosłych obywateli USA wykazały, że średnie wydatki gospodarstwa domowego na cele charytatywne w 1989 wyniosły 734\\\\$, podczas gdy wyestymowane odchylenie standardowe tych wydatków dało 185$. Wyznaczyć 99% przedział ufności przeciętnych wydatków na cele charytatywne w USA w 1989 roku."
+    "**Zadanie - model 3**. Badania przeprowadzone w maju 1990 roku przez Instytut Gallupa na próbie losowej 2727 dorosłych obywateli USA wykazały, że średnie wydatki gospodarstwa domowego na cele charytatywne w 1989 wyniosły 734\\$, podczas gdy wyestymowane odchylenie standardowe tych wydatków dało 185$. Proszę wyznaczyć 99% przedział ufności przeciętnych wydatków na cele charytatywne w USA w 1989 roku."
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 45,
-   "metadata": {
-    "colab": {
-     "base_uri": "https://localhost:8080/"
-    },
-    "executionInfo": {
-     "elapsed": 234,
-     "status": "ok",
-     "timestamp": 1678052963276,
-     "user": {
-      "displayName": "Krzysztof Rudaś",
-      "userId": "02080427901267625380"
-     },
-     "user_tz": -60
-    },
-    "id": "Q8u83J9tXaly",
-    "outputId": "59e2876a-a778-433f-fc7c-328b54542fd5"
-   },
+   "execution_count": 69,
+   "metadata": {},
    "outputs": [
     {
      "name": "stdout",
@@ -532,19 +518,23 @@
     "# mu=?, sigma=?\n",
     "# brak założenia o normalności rozkladu, ale n dostatecznie duze\n",
     "\n",
-    "n = 2727\n",
+    "\n",
+    "n=2727\n",
     "X_mean = 734\n",
     "X_std = 185\n",
-    "alpha = 0.01\n",
+    "conf_level = 0.99\n",
+    "alpha = 1 - conf_level\n",
     "z = stats.norm.ppf(q=1-alpha/2, loc=0, scale=1)\n",
     "\n",
+    "# Tworzymy przedział ufności, zwróć uwagę że mamy kwantyle z rozkładu normalnego a nie t-studenta\n",
+    "# Stopnie swobody (ddf) są potrzebne przy użyciu rozkładu t-Studenta, ale tutaj używamy rozkładu normalnego\n",
     "interval = (X_mean - z * X_std / np.sqrt(n), X_mean + z * X_std / np.sqrt(n))\n",
     "print(\"Przedział ufnośći na poziomie ufności 0.99: {}\".format(interval))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 46,
+   "execution_count": 66,
    "metadata": {
     "id": "_RSUiHXbXaly"
    },
@@ -556,7 +546,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 47,
+   "execution_count": 67,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -581,7 +571,7 @@
        "(np.float64(724.8747191639189), np.float64(743.1252808360811))"
       ]
      },
-     "execution_count": 47,
+     "execution_count": 67,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -601,7 +591,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 48,
+   "execution_count": 82,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -629,19 +619,24 @@
     }
    ],
    "source": [
-    "n = 150\n",
-    "X_mean = 136.9\n",
-    "X_std = 22.6\n",
-    "alpha = 0.05\n",
-    "z = stats.norm.ppf(q=1-alpha/2, loc=0, scale=1)\n",
+    "# Dane wejściowe\n",
+    "n = 150  # liczba obserwacji (zabiegów)\n",
+    "X_mean = 136.9  # średni czas operacji\n",
+    "X_std = 22.6  # odchylenie standardowe\n",
+    "conf_level = 0.95  # poziom ufności\n",
     "\n",
+    "# Poziom istotności i kwantyl rozkładu normalnego\n",
+    "alpha = 1 - conf_level\n",
+    "z = stats.norm.ppf(1 - alpha / 2)\n",
+    "\n",
+    "# Przedział ufności\n",
     "interval = (X_mean - z * X_std / np.sqrt(n), X_mean + z * X_std / np.sqrt(n))\n",
     "print(\"Przedział ufnośći na poziomie ufności 0.99: {}\".format(interval))"
    ]
   },
   {
    "cell_type": "code",
-   "execution_count": 49,
+   "execution_count": 71,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -666,13 +661,20 @@
        "(np.float64(133.28331320381233), np.float64(140.51668679618768))"
       ]
      },
-     "execution_count": 49,
+     "execution_count": 71,
      "metadata": {},
      "output_type": "execute_result"
     }
    ],
    "source": [
     "stats.norm.interval(confidence=1-alpha, loc=X_mean, scale = X_std/np.sqrt(n))"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z 95% pewnością możemy stwierdzić, że średni czas operacji artroskopii stawu biodrowego w populacji mieści się w przedziale od 133,28 do 140,52 minut."
    ]
   },
   {
@@ -707,7 +709,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 50,
+   "execution_count": 80,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -751,8 +753,15 @@
    ]
   },
   {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "Z 99% pewnością możemy stwierdzić, że rzeczywista proporcja wadliwych detali w całej produkcji mieści się w przedziale od 3,2% do 6,8%."
+   ]
+  },
+  {
    "cell_type": "code",
-   "execution_count": 51,
+   "execution_count": 73,
    "metadata": {
     "id": "V-I7x2yKXalz"
    },
@@ -766,7 +775,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 52,
+   "execution_count": 74,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -792,7 +801,7 @@
        "(np.float64(0.03224732165140968), np.float64(0.06775267834859033))"
       ]
      },
-     "execution_count": 52,
+     "execution_count": 74,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -812,7 +821,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 53,
+   "execution_count": 75,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -856,7 +865,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 54,
+   "execution_count": 76,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -881,7 +890,7 @@
        "(np.float64(0.14093104511960805), np.float64(0.17906895488039193))"
       ]
      },
-     "execution_count": 54,
+     "execution_count": 76,
      "metadata": {},
      "output_type": "execute_result"
     }
@@ -941,7 +950,7 @@
   },
   {
    "cell_type": "code",
-   "execution_count": 55,
+   "execution_count": 77,
    "metadata": {
     "colab": {
      "base_uri": "https://localhost:8080/"
@@ -966,7 +975,7 @@
        "(np.float64(6.871904199623725), np.float64(8.156845800376272))"
       ]
      },
-     "execution_count": 55,
+     "execution_count": 77,
      "metadata": {},
      "output_type": "execute_result"
     }
