--- a/01_statystyka/03_test_normalnosci.ipynb
+++ b/01_statystyka/03_test_normalnosci.ipynb
@@ -56,14 +56,14 @@
    },
    "source": [
     "## Testy normalności - test Shapiro-Wilka\n",
-    "\\begin{equation*}\n",
+    "$$\\begin{equation*}\n",
     "\\begin{split}\n",
     "    H_0&: \\text{rozkład badanej cechy jest normalny}\\\\\n",
     "    H_1&: \\text{rozkład badanej cechy nie jest normalny}\n",
     "\\end{split}\n",
-    "\\end{equation*}\n",
+    "\\end{equation*}$$\n",
     "\n",
-    "Statystyka testowa \\textbf{testu Shapiro-Wilka} dana jest wzorem\n",
+    "Statystyka testowa **testu Shapiro-Wilka** dana jest wzorem:\n",
     "\\begin{equation*}\n",
     "    T = \\frac{\\Big( \\sum_{i=1}^{[\\frac{n}{2}]}a_i(n)(X_{n-i+1:n} - X_{i:n} \\Big)^2}{\\sum_{i=1}^n(X_i - \\overline{X})^2},\n",
     "\\end{equation*}\n",
@@ -2483,7 +2483,7 @@
    "provenance": []
   },
   "kernelspec": {
-   "display_name": "Python 3",
+   "display_name": ".venv",
    "language": "python",
    "name": "python3"
   },
@@ -2497,7 +2497,7 @@
    "name": "python",
    "nbconvert_exporter": "python",
    "pygments_lexer": "ipython3",
-   "version": "3.8.8"
+   "version": "3.12.0"
   }
  },
  "nbformat": 4,
