--- a/03_regresja/01_regresja_jednej_zmiennej.ipynb
+++ b/03_regresja/01_regresja_jednej_zmiennej.ipynb
@@ -114,7 +114,7 @@
     "id": "cFVGVRlFWEKM"
    },
    "source": [
-    "## Pakiet [`statsmodels`](https://www.statsmodels.org/stable/genindex.html)"
+    "###Pakiet [`statsmodels`](https://www.statsmodels.org/stable/genindex.html)"
    ]
   },
   {
@@ -1208,7 +1208,7 @@
     "id": "JHx9TtmA88jE"
    },
    "source": [
-    "### Wykres rozproszenia $x$ vs. $y$ z wyznaczoną przez model prostą regresji $y=13.6419 - 0.0531 \\cdot x$"
+    "####Wykres rozproszenia $x$ vs. $y$ z wyznaczoną przez model prostą regresji $y=13.6419 - 0.0531 \\cdot x$"
    ]
   },
   {
@@ -2986,7 +2986,7 @@
     "id": "frVr7ocXWEKd"
    },
    "source": [
-    "### **Metoda Boxa-Coxa**\n",
+    "####**Metoda Boxa-Coxa**\n",
     "\n",
     "Metoda Boxa-Coxa jest popularnym rozwiązaniem stosowanym do przekształcenia zmiennej. Ważnym założeniem metody jest dodatniość wszystkich wartość.\n",
     "Metoda przekształca zmienną $z>0 \\to t_{\\lambda}(z)$, gdzie\n",
@@ -3011,7 +3011,7 @@
     "id": "qf4kfWuYWEKe"
    },
    "source": [
-    "## Zadanie 2.1\n",
+    "###Zadanie 2.1\n",
     "Znajdź najlepszy parametr $\\lambda$ dla przekształcenia zmiennej niezależnej `nox`, przekształć zmienną zgodnie z uzyskaną wartością i dopasuj model prostej regresji liniowej."
    ]
   },
@@ -3365,7 +3365,7 @@
     "id": "4ZKou2S4WEKf"
    },
    "source": [
-    "### Metoda Yeo-Johnsona\n",
+    "####Metoda Yeo-Johnsona\n",
     "\n",
     "$$\n",
     "    t_{\\lambda}(z)=\\left.\n",
@@ -4855,7 +4855,7 @@
    "cell_type": "markdown",
    "metadata": {},
    "source": [
-    "### 📊 Dlaczego redukujemy kolumny po OneHotEncoder?**\n",
+    "####📊 Dlaczego redukujemy kolumny po OneHotEncoder?**\n",
     "\n",
     "Kiedy używamy **OneHotEncoder**, kategorie są zamieniane na kolumny z wartościami **0** i **1**. Jednak:\n",
     "\n",
@@ -5837,21 +5837,21 @@
     "id": "vvEw9TWMF5gB"
    },
    "source": [
-    "### 🧠 **Dlaczego zmiana poziomu referencyjnego wpływa na predykcje?**\n",
+    "####🧠 **Dlaczego zmiana poziomu referencyjnego wpływa na predykcje?**\n",
     "\n",
     "Gdy mamy **zmienną kategoryczną (np. płeć: mężczyzna/kobieta)** i stosujemy kodowanie za pomocą **zmiennych fikcyjnych (dummy variables)**, musimy wybrać **poziom referencyjny**. To on określa, do jakiej wartości będą odnosiły się współczynniki regresji.\n",
     "\n",
     "---\n",
     "\n",
-    "## 🚀 **1. Poziom referencyjny – o co chodzi?**\n",
+    "###🚀 **1. Poziom referencyjny – o co chodzi?**\n",
     "\n",
-    "### 🟢 **Przykład początkowy (poziom referencyjny: Kobieta)**  \n",
+    "####🟢 **Przykład początkowy (poziom referencyjny: Kobieta)**  \n",
     "W tym podejściu zakodowaliśmy zmienną **`sex`** jako:\n",
     "\n",
     "- **1** → Mężczyzna  \n",
     "- **0** → Kobieta  \n",
     "\n",
-    "### 📊 **Równanie regresji wygląda tak:**\n",
+    "####📊 **Równanie regresji wygląda tak:**\n",
     "\n",
     "$y = b_0 + b_1 \\cdot \\text{sex}$\n",
     "\n",
@@ -5871,14 +5871,14 @@
     "\n",
     "---\n",
     "\n",
-    "### 🔄 **2. Zmiana poziomu referencyjnego (poziom referencyjny: Mężczyzna)**  \n",
+    "####🔄 **2. Zmiana poziomu referencyjnego (poziom referencyjny: Mężczyzna)**  \n",
     "\n",
     "Teraz traktujemy **Mężczyznę jako poziom referencyjny**, czyli zmienna `sex` przyjmuje wartości:\n",
     "\n",
     "- **1** → Kobieta  \n",
     "- **0** → Mężczyzna  \n",
     "\n",
-    "### 📊 **Równanie regresji wygląda tak:**\n",
+    "####📊 **Równanie regresji wygląda tak:**\n",
     "\n",
     "$\n",
     "y = c_0 + c_1 \\cdot \\text{sex}\n",
@@ -5900,9 +5900,9 @@
     "\n",
     "---\n",
     "\n",
-    "## 🔑 **3. Jak współczynniki są ze sobą powiązane?**\n",
+    "###🔑 **3. Jak współczynniki są ze sobą powiązane?**\n",
     "\n",
-    "### Przekształcenie współczynników:\n",
+    "####Przekształcenie współczynników:\n",
     "\n",
     "- $c_0 = b_0 + b_1$\n",
     "- $c_1 = -b_1$\n",
@@ -5914,7 +5914,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📊 **4. Przykład liczbowy:**\n",
+    "###📊 **4. Przykład liczbowy:**\n",
     "\n",
     "Załóżmy, że masz takie wyniki dla poziomu referencyjnego:\n",
     "\n",
@@ -5927,7 +5927,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📚 **5. Dlaczego predykcje się różnią?**\n",
+    "###📚 **5. Dlaczego predykcje się różnią?**\n",
     "\n",
     "**Same wartości przewidywane (y) się nie zmieniają**, ale **interpretacja współczynników tak!**\n",
     "\n",
@@ -5936,7 +5936,7 @@
     "\n",
     "---\n",
     "\n",
-    "## 📝 **6. Podsumowanie w punktach:**\n",
+    "###📝 **6. Podsumowanie w punktach:**\n",
     "\n",
     "1. **Poziom referencyjny definiuje punkt startowy modelu.**  \n",
     "2. Zmiana poziomu referencyjnego **zmienia interpretację współczynników**, ale **nie wpływa na przewidywane wartości (y)**.  \n",
@@ -6552,7 +6552,7 @@
     "id": "WAHUy5z7WEKh"
    },
    "source": [
-    "## Zadanie 3.1\n",
+    "###Zadanie 3.1\n",
     "Sprawdź jak została zakodowana zmienna `ShelveLoc` w zbiorze danych `Carseats`. Zmień poziom wartości dla tej zmiennej, sprawdź różnice w modelu."
    ]
   },
@@ -8588,6 +8588,101 @@
    "source": [
     "lm1.intercept_+lm1.coef_[0]"
    ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": [
+    "### WAŻNE! 🧠 **Dlaczego wysokie $R^2$ nie zawsze oznacza, że dobrze dopasowaliśmy model liniowy?**\n",
+    "\n",
+    "Wysokie $R^2$ (bliskie 1) sugeruje, że model dobrze wyjaśnia zmienność danych, **ale nie zawsze oznacza to, że model jest właściwy lub użyteczny**. Oto dlaczego:\n",
+    "\n",
+    "---\n",
+    " \n",
+    "#### 🚨 **1️⃣ Przeuczenie modelu (Overfitting)**\n",
+    "\n",
+    "- **Problem:** Model jest zbyt skomplikowany i dostosowany do szumów oraz przypadkowych fluktuacji w danych.  \n",
+    "- **Skutek:** Wysokie $R^2$ na danych treningowych, ale **słabe wyniki na danych testowych**.\n",
+    "\n",
+    "**Przykład:**  \n",
+    "Model zbyt skomplikowany dla prostych danych (np. wielomian 10. stopnia dla prostej linii) uzyska bardzo wysokie $R^2$, ale nie będzie dobrze generalizował.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "#### 🚨 **2️⃣ Brak liniowej zależności**\n",
+    "\n",
+    "- **Problem:** Dane mogą mieć nieliniową zależność, a mimo to model liniowy dopasowuje się „jako tako” do danych.  \n",
+    "- **Skutek:** Model ma pozornie dobre $R^2$, ale źle opisuje prawdziwy związek między zmiennymi.\n",
+    "\n",
+    "**Przykład:**  \n",
+    "Dane mają zależność kwadratową (parabola), a my próbujemy dopasować do nich prostą linię.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🚨 **3️⃣ Fałszywa korelacja (korelacja pozorna)**\n",
+    "\n",
+    "- **Problem:** Zmienne mogą być skorelowane przypadkowo, a nie dlatego, że istnieje między nimi rzeczywisty związek przyczynowo-skutkowy.  \n",
+    "- **Skutek:** Wysokie $R^2$, ale bezsensowne wyniki.\n",
+    "\n",
+    "**Przykład:**  \n",
+    "Liczba bocianów a liczba urodzeń dzieci w małych wsiach. Obie zmienne są skorelowane, ale to korelacja przypadkowa.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🚨 **4️⃣ Niska liczba obserwacji (próbek)**\n",
+    " \n",
+    "- **Problem:** Przy małej liczbie danych nawet przypadkowe zależności mogą dać wysokie $R^2$.  \n",
+    "- **Skutek:** Model wygląda na dobrze dopasowany, ale wyniki nie są wiarygodne.\n",
+    "\n",
+    "**Przykład:**  \n",
+    "Dopasowanie linii regresji do 5 punktów może dać idealne $R^2$, nawet jeśli nie ma żadnego rzeczywistego związku.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 🚨 **5️⃣ Brak uwzględnienia istotnych zmiennych**\n",
+    "\n",
+    "- **Problem:** Istnieją ważne zmienne, które nie zostały uwzględnione w modelu.  \n",
+    "- **Skutek:** Model pozornie dobrze opisuje dane (wysokie $R^2$), ale pomija kluczowe czynniki wpływające na wynik.\n",
+    "\n",
+    "**Przykład:**  \n",
+    "Próbujesz przewidzieć cenę domu na podstawie wielkości działki, ale pomijasz lokalizację. Wysokie $R^2$ może być złudne.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### ✅ **Jak sprawdzić, czy model jest dobrze dopasowany?**\n",
+    "\n",
+    "1. **Analiza reszt (residual plots)**  \n",
+    "   - Sprawdź, czy reszty są losowo rozłożone wokół osi X.  \n",
+    "   - Jeśli widzisz wzory (np. krzywe lub lejki), model jest źle dopasowany.\n",
+    "\n",
+    "2. **Wartość R² na danych testowych (walidacja krzyżowa)**  \n",
+    "   - Wysokie $R^2$ na danych testowych sugeruje, że model dobrze generalizuje.\n",
+    "\n",
+    "3. **Sprawdzenie założeń regresji liniowej:**  \n",
+    "   - Liniowość  \n",
+    "   - Homoscedastyczność (stała wariancja reszt)  \n",
+    "   - Normalność reszt  \n",
+    "   - Brak współliniowości\n",
+    "\n",
+    "4. **Wskaźniki alternatywne:**  \n",
+    "   - **R² skorygowane (Adjusted R²)** – uwzględnia liczbę zmiennych w modelu.  \n",
+    "   - **RMSE (Root Mean Squared Error)** – mierzy średni błąd modelu.\n",
+    "\n",
+    "---\n",
+    "\n",
+    "### 📝 **Podsumowanie w 3 punktach:**\n",
+    "\n",
+    "1. **Wysokie $R^2$ nie gwarantuje dobrego modelu.**  \n",
+    "2. **Sprawdź reszty, walidację krzyżową i spełnienie założeń regresji.**  \n",
+    "3. **Używaj innych miar oceny modelu (np. RMSE, R² skorygowane).**\n",
+    "\n",
+    "**👉 Pamiętaj:** Wysokie $R^2$ to dobry znak, ale nie jedyny wskaźnik jakości modelu! 😊📊"
+   ]
+  },
+  {
+   "cell_type": "markdown",
+   "metadata": {},
+   "source": []
   }
  ],
  "metadata": {
